# tetris

./: .gitignore  .travis.yml  LICENSE  README.md  stack.yaml  tetris.cabal
.github/workflows/: ci.yaml  ci.yml  release.yaml
app/: Main.hs
dex-images/tetris/: Dockerfile
src/: Tetris.hs
src/UI/: Game.hs  PickLevel.hs
test/: Spec.hs
