name:                tetris
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/SamTay/tetris#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
copyright:           2017 Sam Tay
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tetris
                     , UI.PickLevel
                     , UI.Game
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , linear
                     , microlens
                     , microlens-th
                     , random
                     , vty >= 5.15
  default-language:    Haskell2010

executable tetris
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , optparse-applicative
                     , tetris
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamTay/tetris
