name:                tetris
version:             0.1.2.0
-- synopsis:
-- description:
homepage:            https://github.com/SamTay/tetris#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@gmail.com
copyright:           2017 Sam Tay
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tetris
                     , UI.PickLevel
                     , UI.Game
  build-depends:       base >= 4.7 && < 5
                     , brick                >= 0.17 && < 0.18
                     , containers           >= 0.5.7 && < 0.6
                     , microlens            >= 0.4.8 && < 0.5
                     , microlens-th         >= 0.4.1 && < 0.5
                     , linear               >= 1.20.6 && < 1.21
                     , random               >= 1.1 && < 1.2
                     , vty                  >= 5.15 && < 5.16

  default-language:    Haskell2010

executable tetris
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , directory            >= 1.3.0 && < 1.4
                     , filepath             >= 1.4.1 && < 1.5
                     , optparse-applicative >= 0.13.2.0 && < 0.14
                     , tetris
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamTay/tetris
