name:                tetris
version:             0.1.4.0
homepage:            https://github.com/samtay/tetris#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@pm.me
copyright:           2021 Sam Tay
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tetris
                     , UI.PickLevel
                     , UI.Game
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , lens
                     , linear
                     , random
                     , transformers
                     , vty
  default-language:    Haskell2010

executable tetris
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , optparse-applicative
                     , tetris
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamTay/tetris
